Products pagination and mdb5 first touch.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,8 @@
     <script src="{{ url_for('static', filename='/bootstrap/bootstrap.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap/bootstrap.min.css') }}"/>
     <title>{% block title %}{% endblock %} - IShop</title>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='mdb5/css/hover_shadow.min.css') }}" />
 </head>
 <body>
 {% block navbar %}
