--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -2,11 +2,11 @@
 {{ super() }}
 {% block title %}Товари{% endblock %}
 {% block content %}
-    <div class="row row-cols-md-1 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4 g-4">
+    <div class="row row-cols-md-1 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4 g-4 mb-4">
         {% for product in products %}
             {% set picture = product.pictures[0] %}
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 hover-shadow" style="cursor: pointer" onclick="location.href='{{ url_for('product', id=product.id) }}'">
                     <img src="{# плейсхолдер, якщо картинки немає #}
                         {{ url_for('static', filename=config['PRODUCT_UPLOAD_FOLDER'] + '/' + picture) }}" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -24,6 +24,27 @@
             </div>
         {% endfor %}
     </div>
-    {# TODO: Кнопки для переключення між сторінками #}
-    {{ number_of_pages }}
+    <ul class="pagination justify-content-center">
+        <li class="page-item {{ 'disabled' if page == 1  }}"><a class="page-link" href="{{ url_for('products', page=page-1) }}">Назад</a></li>
+        {% if page > 1 %}
+            <li class="page-item"><a class="page-link" href="{{ url_for('products', page=1) }}">1</a></li>
+        {% endif %}
+        {% if page > 4 %}
+            <li class="page-item disabled"><a class="page-link">...</a></li>
+        {% endif %}
+        {% for p in range(page - 3, page) if p > 1 %}
+            <li class="page-item"><a class="page-link" href="{{ url_for('products', page=p) }}">{{ p }}</a></li>
+        {% endfor %}
+        <li class="page-item active"><a class="page-link" href="{{ url_for('products', page=page) }}">{{ page }}</a></li>
+        {% for p in range(page + 1, page + 4) if p < number_of_pages %}
+            <li class="page-item"><a class="page-link" href="{{ url_for('products', page=p) }}">{{ p }}</a></li>
+        {% endfor %}
+        {% if page < number_of_pages - 4 %}
+            <li class="page-item disabled"><a class="page-link">...</a></li>
+        {% endif %}
+        {% if page < number_of_pages %}
+            <li class="page-item"><a class="page-link" href="{{ url_for('products', page=number_of_pages) }}">{{ number_of_pages }}</a></li>
+        {% endif %}
+        <li class="page-item {{ 'disabled' if page == number_of_pages }}"><a class="page-link" href="{{ url_for('products', page=page+1) }}">Вперед</a></li>
+    </ul>
 {% endblock %}
