--- a/templates/products/old_products.html
+++ b/templates/products/old_products.html
@@ -4,17 +4,21 @@
 {% block content %}
     <div class="row row-cols-md-1 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-4 g-4 mb-4">
         {% for product in products %}
-            {% set picture = product.pictures[0] %}
+            {% if product.pictures %}
+                {% set picture = product.pictures[0] %}
+            {% endif %}
             <div class="col">
-                <div class="card h-100 hover-shadow" style="cursor: pointer" onclick="location.href='{{ url_for('product', id=product.id) }}'">
-                    <img src="{# плейсхолдер, якщо картинки немає #}
-                        {{ url_for('static', filename=config['PRODUCT_UPLOAD_FOLDER'] + '/' + picture) }}" class="card-img-top" alt="...">
+                <div class="card h-100 {{ 'hover-shadow' if product.in_stock() }}" style="cursor: pointer; {{ 'color: gray;' if not product.in_stock() }}" onclick="location.href='{{ url_for('product', product_id=product.id) }}'">
+                    <img src="{{ url_for('static', filename=config['PRODUCT_UPLOAD_FOLDER'] + '/' + picture) if picture else url_for('static', filename='placeholder.png') }}"
+                         class="card-img-top"
+                         style="{{ 'filter: grayscale(100%)' if not product.in_stock() }}"
+                         alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{ product.title }}</h5>
                         <p class="card-text">{{ product.desc }}</p>
                     </div>
                     <div class="card-footer">
-                        <a {# TODO: повинно працювати через АЖАКС, без перезавантаження сторінки #} class="btn btn-success w-100">Додати у корзину</a>
+                        <a {# TODO: повинно працювати через АЖАКС, без перезавантаження сторінки #} class="btn btn-success w-100 {{ 'disabled' if not product.in_stock() }}">Додати у корзину</a>
                         {% if user.is_authenticated and user.has_role('editor') %}
                             <a {# TODO: повинно працювати через АЖАКС, без перезавантаження сторінки #} class="btn btn-warning w-100 mt-1">Редагувати</a>
                             <a {# TODO: повинно працювати через АЖАКС, без перезавантаження сторінки #} class="btn btn-danger w-100 mt-1">Видалити</a>
