--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -7,6 +7,9 @@
     <div class="w-50 mx-auto">
         {% for picture in product.pictures %}
             <img src="{{ url_for('static', filename=config['PRODUCT_UPLOAD_FOLDER'] + '/' + picture) }}" alt="..." class="img-thumbnail"/>
+        {% else %}
+            <img src="{{ url_for('static', filename='placeholder.png') }}" alt="..." class="img-thumbnail"
+            />
         {% endfor %}
     </div>
     {{ product.price }}-{{ product.discount }}={{ product.price - product.discount }}<br>
