--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,3 +1,16 @@
 * {
     font-size: calc(40px - 1vw);
 }
+
+.thumb-post img {
+    object-fit: none; /* Do not scale the image */
+    object-position: center; /* Center the image within the element */
+    width: 100%;
+    max-height: 250px;
+    margin-bottom: 1rem;
+}
+
+.my-img-thumbnail{
+    width: 100px;
+    height: 100px;
+}
